Initial clueboard.co changes

--- a/404.md
+++ b/404.md
@@ -4,4 +4,6 @@ title: "404: Page not found"
 permalink: 404.html
 ---
 
-<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again.</p>
+<video draggable="false" playsinline loop title="Confused Travolta" style="width: 490px, height: 476px;" autoplay>
+	<source type="video/mp4" src="/assets/mp4/confused-travolta.mp4">
+</video>
