--- a/_posts/2024-12-31-hardware.md
+++ b/_posts/2024-12-31-hardware.md
@@ -5,26 +5,81 @@ author: "Zach White"
 image: google-first-rack.jpg
 ---
 
-As I hinted in my last post, I've had a chance to dig into hardware a bit. I did a lot of research online, and mostly found information that confirmed my prior assumptions. That always makes me suspicious, but honestly I think hardware matters less than it ever did at this point. For most situations and workloads, pretty much any hardware with enough ram and storage is "good enough".
+<center>Image: <a href="https://commons.wikimedia.org/wiki/File:GoogleRack_ComputerHistoryMuseum.jpg">GoogleRack ComputerHistoryMuseum</a> by James Fry. <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">CC BY-SA 3.0</a></center>
+
+As I hinted in my last post, I've had a chance to dig into hardware a bit. I did a lot of research online, and mostly found information that confirmed my prior assumptions. That always makes me suspicious, but honestly I think hardware matters less than it ever did at this point. For the majority of situations and workloads, pretty much any hardware with enough ram and storage is "good enough" today.
 
 The classic move for someone in my situation is to pick up a single x86 machine and use proxmox to spin up 7 VMs, 3 for a Control Plane and 4 for your workers running Ceph Rook and some workloads. You can expand to multiple x86 machines from there if you need to spin up more than your x86 machine can handle.
 
-Another popular option is to use some sort of ARM SBC, like a Raspberry Pi. In fact, going with a Raspberry Pi is attractive because they have a robust ecosystem and all of the underlying software is well tested on the hardware. However, there are other interesting options if you go beyond the Pi. Turing Pi has a really neat ITX board that accepts 4 of their blades, but unfortunately the peripheral vary too much to build the kind of cluster I want. However, that turned me onto the Rockchip based boards, of which there are quite a few interesting boards to choose from.
+Another popular option is to use some sort of ARM SBC, like a Raspberry Pi. In fact, going with a Raspberry Pi is attractive because they have a robust ecosystem and all of the underlying software is well tested on the hardware. However, there are other interesting options if you go beyond the Raspberry. Turing Pi has a really neat ITX board that accepts 4 of their blades, but unfortunately the peripherals available to each blade vary too much to build the kind of cluster I want. However, that turned me onto the Rockchip based boards, of which there are quite a few interesting boards to choose from.
 
 To make a long story short, the most interesting board I found was the Orange Pi 5 Plus. It comes with 8 cores, half of them Cortex A76 and the other half A55, 16gb of RAM, two 2.5gb NICs, an M.2 slot for an SSD AND an M.2 slot I can put a SATA interface on. My only concern is the software ecosystem, fewer OSes support the Orange Pi boards. However, it's hard to beat the value in these compared to the Raspberry Pi 5.
 
 |  | Raspberry Pi 5 8gb | Orange Pi 5 Plus 16gb |
 |--|----------------|------------------|
-|Board | $90 | $152 |
-| Heatsinks | $10 | $8 |
-| M.2 HAT | $20 | - |
-| 1TB NVMe | $90 | $50 |
-| SATA Adaptor | $22 | $25 |
-| 2 x 2TB SATA SSD | $210 | $210 |
+| **Board** | $90 | $152 |
+| **Heatsinks** | $10 | $8 |
+| **M.2 HAT** | $20 | - |
+| **1TB NVMe** | $90 | $50 |
+| **SATA Adaptor** | $22 | $25 |
+| **2 x 2TB SATA SSD** | $210 | $210 |
 | **Total** | $442 | $445 |
 
 As you can see, by the time you've built out each configuration you're looking at pretty much the same cost per node. The added cost (and complexity) of the Raspberry Pi is due to the M.2 hat only accepting 2230 and 2242 M.2 cards. These compact cards are more expensive for larger storage sizes. 
 
-But what kind of performance difference are we looking at? I didn't run a robust set of test suites or anything, but I did install DietPi on each system and do some benchmarking. Unfortunately I accidentally deleted the file with the results, but on the whole I was getting 2-3x faster CPU with the Orange Pi and about 40% faster I/O on the NVMe. I haven't compared SATA directly, but the Raspberry Pi is using USB-3 SATA adaptors vs the Orange Pi's M.2 SATA adaptors, so my gut says the Orange Pi will be at least 20% faster here. I will do some comparisons once I actually get the hardware setup.
+But what kind of performance difference are we looking at? I didn't run a robust set of test suites or anything, but I did install DietPi on each system and do some benchmarking. Unfortunately I accidentally deleted the file with the results, but they aligned with the [DietPi max benchmarks](https://dietpi.com/survey/#benchmark) in general. Let's pull out the Orange Pi 5 Plus and the Raspberry Pi 5 rows for comparison. (Pulled on 2024-12-31, may be different by the time you look.)
 
-So that's my hardware figured out. In my next post I will be talking about how I am going to package all of this hardware up in a functional and aesthetically pleasing form.
+<table>
+ <thead>
+  <tr>
+   <th></th>
+   <th colspan=3>CPU time (lower is faster)</th>
+   <th colspan=3>CPU idle temp [°C]</th>
+   <th colspan=3>CPU load temp [°C]</th>
+  </tr>
+  <tr>
+   <th></th>
+   <th>Avg</th>
+   <th>Min</th>
+   <th>Max</th>
+   <th>Avg</th>
+   <th>Min</th>
+   <th>Max</th>
+   <th>Avg</th>
+   <th>Min</th>
+   <th>Max</th>
+  </tr>
+ </thead>
+ <tbody>
+  <tr>
+   <td><strong>Orange Pi 5 Plus</strong><br>(13 tests)</td>
+   <td>2.11s</td>
+   <td>2.04s</td>
+   <td>2.18s</td>
+   <td>36</td>
+   <td>28</td>
+   <td>50</td>
+   <td>43</td>
+   <td>34</td>
+   <td>60</td>
+  </tr>
+  <tr>
+   <td><strong>Raspberry Pi 5</strong><br>(117 tests)</td>
+   <td>2.20s</td>
+   <td>1.71s</td>
+   <td>3.94s</td>
+   <td>46</td>
+   <td>29</td>
+   <td>60</td>
+   <td>54</td>
+   <td>37</td>
+   <td>72</td>
+  </tr>
+ </tbody>
+</table>
+
+As you can see the Orange Pi 5 Plus beats out the Raspberry Pi 5 in every way. While there's clearly a major difference in sampling and quality control here, my own testing put both machines close to their average. I would love to dig into the raw numbers here, as it seems obvious to me that there are some clear outlier reports for the Raspberry Pi 5, based on min and max. However, this is enough data for me to draw some clear conclusions.
+
+Both boards perform well enough for my purposes, but there is a clear difference in capacity per dollar. The Raspberry Pi 5 has the same number of high performance Cortex A76 cores, but lacks the 4 A55 cores that will let us have reduced power consumption when loads are light. The Raspberry Pi comes with only 8gb of RAM in a single bank, vs the 2 banks totalling 16gb that the Orange Pi has. Temperatures, even with a heatsink and constant fan, are generally 10° cooler on the Orange Pi. The Orange Pi comes with M.2 slots built-in, meaning I can add a SATA card and directly attach all my drives. You have to add a HAT to the Raspberry Pi for NVME and then use USB-SATA adaptors for storage beyond that.
+
+That wraps up the decisioning process around hardware. As I mentioned in my last post, the Raspberry Pi 5 will be repurposed as the Control Plane, and I will build out four Orange Pi boards to handle compute and storage. In my next post I will be talking about how I am going to package all of this hardware up in a functional and aesthetically pleasing form.
