--- a/_posts/2024-12-31-hardware.md
+++ b/_posts/2024-12-31-hardware.md
@@ -78,8 +78,8 @@ But what kind of performance difference are we looking at? I didn't run a robust
  </tbody>
 </table>
 
-As you can see the Orange Pi 5 Plus beats out the Raspberry Pi 5 in every way. While there's clearly a major difference in sampling and quality control here, my own testing put both machines close to their average. I would love to dig into the raw numbers here, as it seems obvious to me that there are some clear outlier reports for the Raspberry Pi 5, based on min and max. However, this is enough data for me to draw some clear conclusions.
+As you can see the Orange Pi 5 Plus beats out the Raspberry Pi 5 in every way. While there's clearly a major difference in sampling and quality control here, my own testing put both machines close to their average. I would love to dig into the raw numbers here, as it seems obvious to me that there are some outlier reports for the Raspberry Pi 5, based on min and max. However, this is enough data for me to draw some conclusions.
 
-Both boards perform well enough for my purposes, but there is a clear difference in capacity per dollar. The Raspberry Pi 5 has the same number of high performance Cortex A76 cores, but lacks the 4 A55 cores that will let us have reduced power consumption when loads are light. The Raspberry Pi comes with only 8gb of RAM in a single bank, vs the 2 banks totalling 16gb that the Orange Pi has. Temperatures, even with a heatsink and constant fan, are generally 10° cooler on the Orange Pi. The Orange Pi comes with M.2 slots built-in, meaning I can add a SATA card and directly attach all my drives. You have to add a HAT to the Raspberry Pi for NVME and then use USB-SATA adaptors for storage beyond that.
+Both boards perform well enough for my purposes, but there is an obvious difference in capacity per dollar. The Raspberry Pi 5 has the same number of high performance Cortex A76 cores, but lacks the 4 A55 cores that will let us have reduced power consumption when loads are light. The Raspberry Pi comes with only 8gb of RAM in a single bank, vs the 2 banks totalling 16gb that the Orange Pi has. Temperatures, even with a heatsink and constant fan, are generally 10° cooler on the Orange Pi. The Orange Pi comes with M.2 slots built-in, meaning I can add a SATA card and directly attach all my drives. You have to add a HAT to the Raspberry Pi for NVME and then use USB-SATA adaptors for storage beyond that.
 
-That wraps up the decisioning process around hardware. As I mentioned in my last post, the Raspberry Pi 5 will be repurposed as the Control Plane, and I will build out four Orange Pi boards to handle compute and storage. In my next post I will be talking about how I am going to package all of this hardware up in a functional and aesthetically pleasing form.
+With the decision to go with Orange Pi 5 Plus made, we can wrap up hardware discussions and move on the the next phase of this project. In my next post I will be talking about how I am going to package all of this hardware up in a functional and aesthetically pleasing form.
