--- a/_posts/2024-12-31-hardware.md
+++ b/_posts/2024-12-31-hardware.md
@@ -27,7 +27,7 @@ To make a long story short, the most interesting board I found was the Orange Pi
 
 As you can see, by the time you've built out each configuration you're looking at pretty much the same cost per node. The added cost (and complexity) of the Raspberry Pi is due to the M.2 hat only accepting 2230 and 2242 M.2 cards. These compact cards are more expensive for larger storage sizes. 
 
-But what kind of performance difference are we looking at? I didn't run a robust set of test suites or anything, but I did install DietPi on each system and do some benchmarking. Unfortunately I accidentally deleted the file with the results, but they aligned with the [DietPi max benchmarks](https://dietpi.com/survey/#benchmark) in general. Let's pull out the Orange Pi 5 Plus and the Raspberry Pi 5 rows for comparison. (Pulled on 2024-12-31, may be different by the time you look.)
+But what kind of performance difference are we looking at? I didn't run a robust set of test suites or anything, but I did install DietPi on each system and do some benchmarking. Unfortunately I accidentally deleted the file with the results, but they aligned with the [DietPi avg benchmarks](https://dietpi.com/survey/#benchmark) in general. Let's pull out the Orange Pi 5 Plus and the Raspberry Pi 5 rows for comparison. (Pulled on 2024-12-31, may be different by the time you look.)
 
 <table>
  <thead>
